--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,10 +3,10 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="default">
 <head>
-    <title>index page</title>
+    <title>reqif hub</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body layout:fragment="content">
-    <h1>system requriments specifications made easy.</h1>
+    <h1>system requirements specifications made easy.</h1>
 </body>
 </html>
