--- a/src/main/resources/templates/default.html
+++ b/src/main/resources/templates/default.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8"></meta>
     <meta http-equiv="x-ua-compatible" content="ie=edge"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
-    <title>Foundation for Sites</title>
+    <title>reqif hub</title>
     <link rel="stylesheet" th:href="@{/css/foundation.css}"></link>
     <link rel="stylesheet" th:href="@{/css/app.css}"></link>
   </head>
