project repository tests

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,7 +6,7 @@
 	<div th:fragment="header" class="top-bar">
 	  <div class="top-bar-left">
 	    <ul class="dropdown menu" data-dropdown-menu="">
-	      <li class="menu-text">ReqIF hub</li>
+	      <li class="menu-text"><a th:href="@{/}">reqIF hub</a></li>
 	      <li>
 	        <a th:href="@{/projects}">Projekte</a>
 	        <ul class="menu vertical">
